@@ -69,6 +69,19 @@ CONFIG = 0x0B
 LICENSE = 0x0C
 KERBEROS = 0x0D
 DHCP = 0x0E
+PROTOCOL = 0x0F
+MODULE = 0x10
+ACL = 0x11
+RESOURCES = 0x12
+PARSER = 0x13
+LOCALE = 0x14
+AUTH = 0x15
+
+NO_FLUSH = 0x00
+FLUSH = 0x01
+
+NO_FUNCTION = 0x00
+FUNCTION = 0x01
 
 _map_id_old2new = {
 	MAIN: "MAIN",
@@ -86,6 +99,13 @@ _map_id_old2new = {
 	LICENSE: "LICENSE",
 	KERBEROS: "KERBEROS",
 	DHCP: "DHCP",
+	PROTOCOL: "PROTOCOL",
+	MODULE: "MODULE",
+	ACL: "ACL",
+	RESOURCES: "RESOURCES",
+	PARSER: "PARSER",
+	LOCALE: "LOCALE",
+	AUTH: "AUTH",
 }
 
 
